// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VM common form component should render all tasks form 1`] = `
<div
  className="tasks-form"
>
  <Connect(MiqFormRenderer)
    FormTemplate={[Function]}
    canReset={true}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "select",
            "id": "zone",
            "initialValue": "all",
            "label": "Zone",
            "name": "zone",
            "options": Array [],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
          Object {
            "component": "select",
            "id": "user",
            "initialValue": "all",
            "label": "User",
            "name": "user",
            "options": Array [
              Object {
                "label": "All Users",
                "value": "all",
              },
              Object {
                "label": "admin",
                "value": "admin",
              },
              Object {
                "label": "1",
                "value": "1",
              },
              Object {
                "label": "system",
                "value": "system",
              },
            ],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
          Object {
            "component": "select",
            "id": "timePeriod",
            "initialValue": "0",
            "label": "24 Hour Time Period",
            "name": "timePeriod",
            "options": Array [
              Object {
                "label": "T",
                "value": "o",
              },
              Object {
                "label": "1",
                "value": " ",
              },
              Object {
                "label": "2",
                "value": " ",
              },
              Object {
                "label": "3",
                "value": " ",
              },
              Object {
                "label": "4",
                "value": " ",
              },
              Object {
                "label": "5",
                "value": " ",
              },
              Object {
                "label": "6",
                "value": " ",
              },
            ],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "component": "checkbox",
                "id": "taskStatus",
                "initialValue": Array [
                  "queued",
                  "running",
                  "completed_ok",
                  "completed_error",
                  "completed_warn",
                ],
                "isRequired": true,
                "label": "Task Status",
                "name": "taskStatus",
                "options": Array [
                  Object {
                    "label": <Icon
                      color="#363636"
                      icon="carbon--SkipForwardFilled"
                      size={16}
                      text="Queued"
                    />,
                    "value": "queued",
                  },
                  Object {
                    "label": <Icon
                      color="#363636"
                      icon="carbon--CircleDash"
                      size={16}
                      text="Running"
                    />,
                    "value": "running",
                  },
                  Object {
                    "label": <Icon
                      color="#3f9c35"
                      icon="carbon--CheckmarkOutline"
                      size={16}
                      text="Ok"
                    />,
                    "value": "completed_ok",
                  },
                  Object {
                    "label": <Icon
                      color="#cc0000 "
                      icon="carbon--MisuseOutline"
                      size={16}
                      text="Error"
                    />,
                    "value": "completed_error",
                  },
                  Object {
                    "label": <Icon
                      color="#ec7a08"
                      icon="carbon--WarningAlt"
                      size={16}
                      text="Warn"
                    />,
                    "value": "completed_warn",
                  },
                ],
                "validate": Array [
                  Object {
                    "message": "At least one task status is required",
                    "type": "required",
                  },
                ],
              },
            ],
            "id": "TaskStatus",
            "name": "TaskStatus",
          },
          Object {
            "component": "select",
            "id": "taskState",
            "initialValue": "all",
            "label": "Task State",
            "name": "taskState",
            "options": Array [],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
        ],
      }
    }
  />
</div>
`;

exports[`VM common form component should render my tasks form 1`] = `
<div
  className="tasks-form"
>
  <Connect(MiqFormRenderer)
    FormTemplate={[Function]}
    canReset={true}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "select",
            "id": "zone",
            "initialValue": "all",
            "label": "Zone",
            "name": "zone",
            "options": Array [],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
          Object {
            "component": "select",
            "id": "timePeriod",
            "initialValue": "0",
            "label": "24 Hour Time Period",
            "name": "timePeriod",
            "options": Array [
              Object {
                "label": "T",
                "value": "o",
              },
              Object {
                "label": "1",
                "value": " ",
              },
              Object {
                "label": "2",
                "value": " ",
              },
              Object {
                "label": "3",
                "value": " ",
              },
              Object {
                "label": "4",
                "value": " ",
              },
              Object {
                "label": "5",
                "value": " ",
              },
              Object {
                "label": "6",
                "value": " ",
              },
            ],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
          Object {
            "component": "sub-form",
            "fields": Array [
              Object {
                "component": "checkbox",
                "id": "taskStatus",
                "initialValue": Array [
                  "queued",
                  "running",
                  "completed_ok",
                  "completed_error",
                  "completed_warn",
                ],
                "isRequired": true,
                "label": "Task Status",
                "name": "taskStatus",
                "options": Array [
                  Object {
                    "label": <Icon
                      color="#363636"
                      icon="carbon--SkipForwardFilled"
                      size={16}
                      text="Queued"
                    />,
                    "value": "queued",
                  },
                  Object {
                    "label": <Icon
                      color="#363636"
                      icon="carbon--CircleDash"
                      size={16}
                      text="Running"
                    />,
                    "value": "running",
                  },
                  Object {
                    "label": <Icon
                      color="#3f9c35"
                      icon="carbon--CheckmarkOutline"
                      size={16}
                      text="Ok"
                    />,
                    "value": "completed_ok",
                  },
                  Object {
                    "label": <Icon
                      color="#cc0000 "
                      icon="carbon--MisuseOutline"
                      size={16}
                      text="Error"
                    />,
                    "value": "completed_error",
                  },
                  Object {
                    "label": <Icon
                      color="#ec7a08"
                      icon="carbon--WarningAlt"
                      size={16}
                      text="Warn"
                    />,
                    "value": "completed_warn",
                  },
                ],
                "validate": Array [
                  Object {
                    "message": "At least one task status is required",
                    "type": "required",
                  },
                ],
              },
            ],
            "id": "TaskStatus",
            "name": "TaskStatus",
          },
          Object {
            "component": "select",
            "id": "taskState",
            "initialValue": "all",
            "label": "Task State",
            "name": "taskState",
            "options": Array [],
            "validate": Array [
              Object {
                "type": "required",
              },
            ],
          },
        ],
      }
    }
  />
</div>
`;
